[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sshshim"
version = "0.1.0a1"
description = "SSH connection reuse through a temporary localhost SSH endpoint."
readme = "README.md"
requires-python = ">=2"
license = "MIT"
authors = [
  { name="Jifeng Wu", email="jifengwu2k@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "enum34; python_version < '3.4'",
    "paramiko",
    "textcompat",
    "typing; python_version < '3.5'"
]

[project.scripts]
sshshim = "sshshim:main"

[project.urls]
"Homepage" = "https://github.com/jifengwu2k/sshshim"
"Bug Tracker" = "https://github.com/jifengwu2k/sshshim/issues"
